# citycalc-model

./: README.md  compare_batches.sh  pyproject.toml  run_patex_on_batch.sh
patex/: __main__.py  compare_model_outputs.py  constants.py  formating.py  memory.py  metrics.py  utils.py
patex/helpers/: __init__.py  add_missing_years.py  add_trigram.py  building_stock_logic.py  calibration.py  column_filter.py  column_rename_regex.py  compute_costs.py  divide_by_year.py  filter_dimension.py  fuel_mix.py  globals.py  group_by.py  groupby_dimensions.py  import_data.py  lag_variable.py  mcd.py  missing_value.py  missing_value_filter.py  row_filter.py  spread_capital.py  string_manipulation.py  tree_merge_groups.py  unpivoting.py  use_variable.py  x_switch.py
patex/nodes/: __init__.py  add_missing_years.py  add_specific_trigram.py  add_trigram.py  aggregator.py  api_interface_metanode.py  assemble_all_output_metanode.py  build_cube_format_metanode.py  building_stock_logic.py  calibration.py  calibration_multidimension_node.py  calibration_node.py  calibration_node_eu.py  cell_splitter_node.py  column_aggregator_node.py  column_appender_node.py  column_combiner_node.py  column_filter_node.py  column_merger_node.py  column_rename_node.py  column_rename_regex_node.py  column_resorter_node.py  column_splitter_node.py  combine_dicts.py  combine_dimensions.py  compute_costs.py  concatenate_node.py  connection.py  constant_import_node.py  constant_value_column_node.py  convert_unit.py  cost_calculation_node_eu.py  cross_joiner_node.py  (+99 more)
scripts/: launch_with_pycharm.py
(+61 files in other folders)
